** Grid pagination/action buttons are now in divs, so you may need to check your styling
** Grid editor bcduiSingleSelect was removed, use bcduiSimpleDropDown instead
** Moved QuickEdit to package bcdui.widgetNg
** createFixedTableHeader uses new css classes, ensure your theme includes them
** bcdui.util.xml.parseFilterExpression was moved to bcdui.wrs.wrsUtil.parseFilterExpression
* Config
** In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml
** Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
** Use Server/configFiles/log4j2.xml (instead of log4j.properties)
** Wrq2SqlServlet has restricted access permissions now requiring bcdAdmin:ImplementationDetails as it reveals implementation details (actual names of db objects)
** bindingItem skipWriteCheck attribute (to bypass subject settings write checks) was removed. Use the new mode (R|W|RW) attribute on SubjectFilterType instead
** for new themes, guiStatus:bcdSideBarPin was changed to guiStatus:bcdSideBarPin-left and guiStatus:bcdSideBarPin-right in case you preset a collapsed/expanded sidebar

.All versions of 3rd party libraries for runtime, are listed in
* bcdui_dependencies.gradle for java
* gradle.properties for javascript

.Build:
* Updated to gradle 7.0, including switching to com.github.node-gradle.node plugin and node-js version 12.13 (LTS)
* Updated to babel-js, node-sass and jsdoc, see build_package.json

.Core:
* _getFillParams which is used in read, write, query, queryNodes can handle xPaths with * now

.Server:
* new SubjectFilterType mode attribute to specify how this filter type should be enabled. on read, write of both (default)
* fix Postgres (empty) CLOB and BLOB reading


Layout:
* introduced right sidebar
* no need to add bcd__sidebar-left-collaps-toggle etc divs/classes. Specify bcdEffectCollapse class at your bcd__sidebar-*__inner element

.Components:
* Cube