@@ -182,14 +182,13 @@ CREATE TABLE bcd_virtualFileSystem
    path           VARCHAR2(1024) NOT NULL,
    resource_clob  CLOB,
    resource_blob  BLOB,
-   is_server      INTEGER NOT NULL,
    updated_by     VARCHAR2(128),
    last_update    TIMESTAMP,
    bcd_userId     VARCHAR2(64),
    scope          VARCHAR2(255),
    instance       VARCHAR2(255),
    meta_data      CLOB,
-   CONSTRAINT bcd_virtual_file_system_pk UNIQUE (path, is_server, bcd_userId)
+   CONSTRAINT bcd_virtual_file_system_pk UNIQUE (path, bcd_userId)
 );
 
 -- cache
