@@ -26,13 +26,16 @@ Some changes are not backward compatible and may require code change in the proj
 ** Moved QuickEdit to package bcdui.widgetNg
 ** createFixedTableHeader uses new css classes, ensure your theme includes them
 ** bcdui.util.xml.parseFilterExpression was moved to bcdui.wrs.wrsUtil.parseFilterExpression
+
 * Config
 ** In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml
+** move shiro settings to WEB-INF/shiro.ini, add <listener><listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class></listener> before shiro filter, update shiro filter from org.apache.shiro.web.servlet.IniShiroFilter to org.apache.shiro.web.servlet.ShiroFilter
 ** Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
 ** Use Server/configFiles/log4j2.xml (instead of log4j.properties)
 ** Wrq2SqlServlet has restricted access permissions now requiring bcdAdmin:ImplementationDetails as it reveals implementation details (actual names of db objects)
 ** bindingItem skipWriteCheck attribute (to bypass subject settings write checks) was removed. Use the new mode (R|W|RW) attribute on SubjectFilterType instead
 ** for new themes, guiStatus:bcdSideBarPin was changed to guiStatus:bcdSideBarPin-left and guiStatus:bcdSideBarPin-right in case you preset a collapsed/expanded sidebar
+** remove is_server from bcd_virtualFileSystem
 
 .All versions of 3rd party libraries for runtime, are listed in
 * bcdui_dependencies.gradle for java
